# readBook

./: .gitignore  .markdownlint.json  404.html  Cargo.toml  book.toml  books.html  dev-tips.html  health.html  index.html  print.html  searchindex.js  searchindex.json  system-design-interview.html  videos.html
.github/workflows/: deploy.yml  test.yml
books/: clean-architecture.html  google-software-engineering.html
codes/Introduction-to-MachineLearning-ByBayesian-Inference/: pyproject.toml
codes/Introduction-to-MachineLearning-ByBayesian-Inference/ch3/: linear_regression.py  linear_regression_1d.py  linear_regression_2d.py
codes/Introduction-to-MachineLearning-ByBayesian-Inference/ch4/: gaussian_mixture_model.py  poisson_mixture_model.py
codes/Introduction-to-MachineLearning-ByBayesian-Inference/utils/: common.py
dev-tips/: git-communications.html  mercari-ladders.html
health/: training.html
src/: SUMMARY.md  books.md  dev-tips.md  health.md  system-design-interview.md  videos.md
src/books/: bayesian-inferance.md  clean-architecture.md  google-software-engineering.md
src/dev-tips/: git-communications.md  mercari-ladders.md  utilities.md  wsl.md
src/e-learn/: system-design-basics-ip-osi-model.md  system-design-basics-loadbalancer-clustering.md  system-design-basics.md  system-design-interview.md  system-design-url-shortener-service.md
system-design-interview/: cache-cdn.html  databases.html  introduction.html  ip-osimodel.html  loadblancer-clustering.html  url-shortener-service.html
videos/: how-greate-leaders-inspire-action.html
(+9 files in other folders)
