[tool.poetry]
name = "introduction-to-machinelearning-bybayesian-inference"
version = "0.1.0"
description = ""
authors = ["tsugumi-sys <tidemark0105@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.5"
matplotlib = "^3.6.2"
seaborn = "^0.12.2"

[tool.poetry.dev-dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
